# cppLib

./: .gitignore  CMakeConfig.txt  CMakeLists.txt  README.md  main.cc
libs/: tiny_gltf.h
math/: Box2.cc  Box2.h  Box3.cc  Box3.h  Cylindrical.cc  Cylindrical.h  Euler.cc  Euler.h  Frustum.cc  Frustum.h  Line3.cc  Line3.h  MathUtils.cc  MathUtils.h  Matrix3.cc  Matrix3.h  Matrix4.cc  Matrix4.h  Plane.cc  Plane.h  Quaternion.cc  Quaternion.h  Ray.cc  Ray.h  Sphere.cc  Sphere.h  Spherical.cc  Spherical.h  SphericalHarmonics3.cc  SphericalHarmonics3.h  Triangle.cc  Triangle.h  Vector2.cc  Vector2.h  Vector3.cc  Vector3.h  Vector4.cc  Vector4.h  float_view.h  infinity.h
models/: EventSet.h  EventSetVoid.h  SafetyThreadTest.h  StaticBody.cc  StaticBody.h
models/__tests__/: EventSet.test.cc
services/: hello.cc  terminal.cc  terminal.h
src/: main.cc
tests/: bufferTest.h  glmTest.h  structCast.h
utils/: StringBuffer.cc  StringBuffer.h  console.h  stringBufferUtils.cc  stringBufferUtils.h  stringUtils.cc  stringUtils.h  wsUtils.cc  wsUtils.h
utils/__tests__/: StringBuffer.test.h
